--- a/contact.html
+++ b/contact.html
@@ -1,35 +1,78 @@
----
-title: Contact
-description: Send us a message to find out more!
-map:
-  latitude: -45.8787605
-  longitude: 170.5027976
-  address: "1 George Street, Dunedin, New Zealand"
-  zoom: 13
-image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
----
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contact</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            color: #333;
+        }
+        .hero {
+            position: relative;
+            padding: 60px 0;
+            background-size: cover;
+            background-position: center;
+            color: white;
+            text-align: center;
+        }
+        .inner-hero {
+            background-color: rgba(0, 0, 0, 0.5);
+            padding: 20px;
+            border-radius: 8px;
+        }
+        .text-container {
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+        }
+        .contact-box {
+            background: #f9f9f9;
+            padding: 40px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .contact-details h3 {
+            margin-top: 0;
+        }
+        a {
+            color: #2e86c1;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
 
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
-	<div class="inner-hero text-container">
-		<div class="hero-text-container">
-			<p class="subtext editable">안녕하세요, 저는 전선아입니다. 저는 웹 개발과 데이터 분석에 열정을 가지고 있는 소프트웨어 엔지니어입니다. 새로운 기술을 배우고 적용하는 것을 좋아하며, 복잡한 문제를 해결하는 과정에서 성취감을 느낍니다. 사용자 경험을 최우선으로 생각하며, 효율적이고 직관적인 솔루션을 개발하고자 노력합니다.
-
-다양한 프로젝트 경험을 통해 협업과 커뮤니케이션의 중요성을 깨달았으며, 항상 열린 마음으로 새로운 도전을 즐깁니다. 저의 목표는 지속적인 학습과 성장을 통해 더욱 뛰어난 개발자가 되는 것입니다.
-
-문의 사항이 있거나 협업을 원하시면 언제든지 연락주세요!
-</p>
-		</div>
-	</div>
+    <div class="inner-hero text-container">
+        <div class="hero-text-container">
+            <p class="subtext editable">
+                안녕하세요, 저는 전선아입니다. 저는 웹 개발과 데이터 분석에 열정을 가지고 있는 소프트웨어 엔지니어입니다. 새로운 기술을 배우고 적용하는 것을 좋아하며, 복잡한 문제를 해결하는 과정에서 성취감을 느낍니다. 사용자 경험을 최우선으로 생각하며, 효율적이고 직관적인 솔루션을 개발하고자 노력합니다.
+            </p>
+            <p class="subtext editable">
+                다양한 프로젝트 경험을 통해 협업과 커뮤니케이션의 중요성을 깨달았으며, 항상 열린 마음으로 새로운 도전을 즐깁니다. 저의 목표는 지속적인 학습과 성장을 통해 더욱 뛰어난 개발자가 되는 것입니다.
+            </p>
+            <p class="subtext editable">
+                문의 사항이 있거나 협업을 원하시면 언제든지 연락주세요!
+            </p>
+        </div>
+    </div>
 </section>
 
 <section class="pad">
-	<div class="text-container contact-box">
-
-		<div class="contact-details">
-
-			<h3>Email</h3>
-			<p class="editable"><a href="mailto:jeonsa0314@gmail.com">jeonsa0314@gmail.com</a></p>
-		</div>
-	</div>
+    <div class="text-container contact-box">
+        <div class="contact-details">
+            <h3>Email</h3>
+            <p class="editable"><a href="mailto:jeonsa0314@gmail.com">jeonsa0314@gmail.com</a></p>
+        </div>
+    </div>
 </section>
 
+</body>
+</html>
