--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,13 @@
+---
+title: Contact
+description: Send us a message to find out more!
+map:
+  latitude: -45.8787605
+  longitude: 170.5027976
+  address: "1 George Street, Dunedin, New Zealand"
+  zoom: 13
+image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
+---
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -48,7 +58,6 @@
     </style>
 </head>
 <body>
-
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
     <div class="inner-hero text-container">
         <div class="hero-text-container">
