--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,16 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Noto Sans KR', sans-serif;
             line-height: 1.6;
             color: #333;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
         }
         .hero {
             position: relative;
-            padding: 60px 0;
+            padding: 80px 20px;
             background-size: cover;
             background-position: center;
             color: white;
@@ -31,8 +34,9 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
         }
         .inner-hero {
             background-color: rgba(0, 0, 0, 0.5);
-            padding: 20px;
-            border-radius: 8px;
+            padding: 40px;
+            border-radius: 10px;
+            display: inline-block;
         }
         .text-container {
             max-width: 800px;
@@ -40,13 +44,23 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
             padding: 20px;
         }
         .contact-box {
-            background: #f9f9f9;
+            background: #fff;
             padding: 40px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            margin-top: -80px;
+            position: relative;
+            z-index: 1;
         }
         .contact-details h3 {
             margin-top: 0;
+            color: #2e86c1;
+            border-bottom: 2px solid #2e86c1;
+            display: inline-block;
+            padding-bottom: 5px;
+        }
+        .contact-details p {
+            font-size: 18px;
         }
         a {
             color: #2e86c1;
@@ -58,9 +72,11 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
     </style>
 </head>
 <body>
+
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
     <div class="inner-hero text-container">
         <div class="hero-text-container">
+            <h1>전선아 소개</h1>
             <p class="subtext editable">
                 안녕하세요, 저는 전선아입니다. 저는 웹 개발과 데이터 분석에 열정을 가지고 있는 소프트웨어 엔지니어입니다. 새로운 기술을 배우고 적용하는 것을 좋아하며, 복잡한 문제를 해결하는 과정에서 성취감을 느낍니다. 사용자 경험을 최우선으로 생각하며, 효율적이고 직관적인 솔루션을 개발하고자 노력합니다.
             </p>
@@ -85,3 +101,4 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 
 </body>
 </html>
+
