--- a/contact.html
+++ b/contact.html
@@ -76,16 +76,16 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
 <section class="hero" style="background-image: url({% include relative-src.html src=page.image %})">
     <div class="inner-hero text-container">
         <div class="hero-text-container">
-            <h1>전선아 소개</h1>
-            <p class="subtext editable">
-                안녕하세요, 저는 전선아입니다. 저는 웹 개발과 데이터 분석에 열정을 가지고 있는 소프트웨어 엔지니어입니다. 새로운 기술을 배우고 적용하는 것을 좋아하며, 복잡한 문제를 해결하는 과정에서 성취감을 느낍니다. 사용자 경험을 최우선으로 생각하며, 효율적이고 직관적인 솔루션을 개발하고자 노력합니다.
-            </p>
-            <p class="subtext editable">
-                다양한 프로젝트 경험을 통해 협업과 커뮤니케이션의 중요성을 깨달았으며, 항상 열린 마음으로 새로운 도전을 즐깁니다. 저의 목표는 지속적인 학습과 성장을 통해 더욱 뛰어난 개발자가 되는 것입니다.
-            </p>
-            <p class="subtext editable">
-                문의 사항이 있거나 협업을 원하시면 언제든지 연락주세요!
-            </p>
+           <p class="subtext editable">
+    <span style="color: #2e86c1;"><strong>안녕하세요, 저는 전선아입니다.</strong></span> 저는 <span style="color: #16a085;"><strong>웹 개발</strong></span>과 <span style="color: #16a085;"><strong>데이터 분석</strong></span>에 열정을 가지고 있는 <span style="color: #e74c3c;"><strong>소프트웨어 엔지니어 지원자</strong></span> 입니다. 새로운 기술을 배우고 적용하는 것을 좋아하며, 복잡한 문제를 해결하는 과정에서 성취감을 느낍니다. 사용자 경험을 최우선으로 생각하며, 효율적이고 직관적인 솔루션을 개발하고자 노력합니다.
+</p>
+<p class="subtext editable">
+    다양한 프로젝트 경험을 통해 <span style="color: #2980b9;"><strong>협업</strong></span>과 <span style="color: #2980b9;"><strong>커뮤니케이션</strong></span>의 중요성을 깨달았으며, 항상 열린 마음으로 새로운 도전을 즐깁니다. 저의 목표는 지속적인 학습과 성장을 통해 더욱 뛰어난 개발자가 되는 것입니다.
+</p>
+<p class="subtext editable">
+    <span style="color: #c0392b;"><strong>문의 사항</strong></span>이 있거나 <span style="color: #c0392b;"><strong>협업</strong></span>을 원하시면 언제든지 <span style="color: #c0392b;"><strong>연락주세요!</strong></span>
+</p>
+
         </div>
     </div>
 </section>
