--- a/contact.html
+++ b/contact.html
@@ -96,6 +96,8 @@ image: https://source.unsplash.com/WNAO036c6FM/2000x1322?a=.png
         <div class="contact-details">
             <h3>Email</h3>
             <p class="editable"><a href="mailto:jeonsa0314@gmail.com">jeonsa0314@gmail.com</a></p>
+            <h3>Github</h3>
+            <p class="editable"><a href="https://github.com/jeonseona" target="_blank">https://github.com/jeonseona</a></p>
         </div>
     </div>
 </section>
