--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 					<li>초심자를 위한 가이드 페이지 제공</li>
 					<li>캠핑장에 대한 정보뿐 아니라 캠핑에 대한 연관정보까지 제공</li>
 				</ul>
+
+				<h3 class="editable">나만의 문제 해결</h3>
+				<ul>
+					<li>API 요청 시 GET 메서드를 사용하여 헤더를 설정하고, 응답 코드에 따라 성공과 오류를 구분하여 처리.<br>
+						이로써 API 호출의 성공 여부를 정확히 확인하고, 적절한 응답을 반환 가능.</li>
+					<li>JSON 데이터를 파싱하여 뉴스 아이템을 리스트로 변환하고, Gson 라이브러리를 사용하여 보기 좋게 포맷팅.<br> 
+						이로써 JSON 데이터를 구조화하여 쉽게 읽고 이해할 수 있게 변환.
+</li>
+				</ul>
 			</div>
 			<div class="image">
 				<span class="editable"><img width="500" height="500" src="{{ site.baseurl }}/images/KampingMate/KampingMate_main.webp" alt="Screenshot"></span>
