--- a/index.html
+++ b/index.html
@@ -55,6 +55,16 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 					<li>건강하게 직접 해 먹을 수 있는 사이트를 만들자!</li>
 					<li>개인 바디데이터와 사용자가 선택한 음식 추천 조건을 선택</li>
 				</ul>
+
+				<h3 class="editable">나만의 문제 해결</h3>
+				<ul>
+					<li>사용자 정보를 세션에서 가져와 새 문의에 필요한 사용자 정보를 자동으로 설정하고 저장.<br>
+						이로써 사용자가 별도로 자신의 정보를 입력할 필요 없이, 시스템에서 자동으로 사용자 정보를 처리</li>
+					<li>로그인된 사용자의 이름과 문의 목록을 동적으로 모델에 추가하여 뷰에 전달. 이를 통해 사용자 맞춤형 화면을 제공하며,<br>
+						사용자가 자신이 작성한 문의 목록을 쉽게 확인 가능.
+
+</li>
+				</ul>
 			</div>
 			<div class="image">
 				<span class="editable"><img width="500" height="500" src="{{ site.baseurl }}/images/FoodMate_main.webp" alt="Screenshot"></span>
