--- a/index.html
+++ b/index.html
@@ -73,31 +73,31 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 	</section>
 
 	<section class="info">
-		<div class="container flex">
-			<div class="text">
-				<h2 class="editable">Campus Connect</h2>
-				<h3 class="editable">안드로이드를 기반으로 한 모바일 학생 명함</h3>
-				<ul>
-					<li>채널에 등록하여 보다 쉽게 본인이 원하는 팀원을 구할 수 있다 !</li>
-					<li>조별과제, 멘토/멘티, 공모전과 같은 대학생활내에서의 활동을 위한 앱</li>
-					<li>공모전 등의 정보도 실시간으로 수집 가능</li>
-				</ul>
+    <div class="container flex">
+        <div class="text">
+            <h2 class="editable">Campus Connect</h2>
+            <h3 class="editable">안드로이드를 기반으로 한 모바일 학생 명함</h3>
+            <ul>
+                <li>채널에 등록하여 보다 쉽게 본인이 원하는 팀원을 구할 수 있다 !</li>
+                <li>조별과제, 멘토/멘티, 공모전과 같은 대학생활내에서의 활동을 위한 앱</li>
+                <li>공모전 등의 정보도 실시간으로 수집 가능</li>
+            </ul>
+            <a href="https://docs.google.com/presentation/d/1xEN8iXe9lHGQxdQOasF8Q5rmXkevtEGy/edit#slide=id.p1" target="_blank">Presentation Link</a>
+            
+            <h3 class="editable">나만의 문제 해결</h3>
+            <ul>
+                <li>부가적인 기능으로, 같은 공간에서 친구 또는 지인들과 이 앱을 사용할 때<br> 
+                    따로 친구 추가 없이 명함을 공유할 수 있도록 QR코드 기능도 추가하면 좋겠다는 의견을 제시</li>
+                <li>이는 Zxing 라이브러리를 통해 구현. QR코드를 사용자에게 표시하게 하고 이를 위해 ImageView나 다른 UI 요소를 사용하였고,<br> 
+                    Zxing 라이브러리를 사용하여 카메라로 QR코드를 스캔하고 정보를 읽는것까지 성공.
+                </li>
+            </ul>
+            <a href="https://docs.google.com/document/d/1fghpEYPjhBy8ILqlYo1iAbAdljFvT0E8/edit" target="_blank">Document Link</a>
+        </div>
+        <div class="image">
+            <span class="editable"><img width="500" height="500" src="{{ site.baseurl }}/images/CampusConnect.png" alt="Screenshot"></span>
+        </div>
+    </div>
+</section>
 
-				<h3 class="editable">나만의 문제 해결</h3>
-				<ul>
-					<li>부가적인 기능으로, 같은 공간에서 친구 또는 지인들과 이 앱을 사용할 때<br> 
-						따로 친구 추가 없이 명함을 공유할 수 있도록 QR코드 기능도 추가하면 좋겠다는 의견을 제시</li>
-					<li>이는 Zxing 라이브러리를 통해 구현. QR코드를 사용자에게 표시하게 하고 이를 위해 ImageView나 다른 UI 요소를 사용하였고,<br> 
-						Zxing 라이브러리를 사용하여 카메라로 QR코드를 스캔하고 정보를 읽는것까지 성공.
-
-
-</li>
-				</ul>
-			</div>
-			<div class="image">
-				<span class="editable"><img width="500" height="500" src="{{ site.baseurl }}/images/CampusConnect.png" alt="Screenshot"></span>
-
-			</div>
-		</div>
-	</section>
 </div>
