--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
                     Zxing 라이브러리를 사용하여 카메라로 QR코드를 스캔하고 정보를 읽는것까지 성공.
                 </li>
             </ul>
-            <a href="https://docs.google.com/document/d/1fghpEYPjhBy8ILqlYo1iAbAdljFvT0E8/edit" target="_blank">Document Link</a>
+            <a href="https://docs.google.com/document/d/1wuYh7YZbTL22I239YCVCwzpG2UnQg4g2/edit#heading=h.gjdgxs" target="_blank">Document Link</a>
         </div>
         <div class="image">
             <span class="editable"><img width="500" height="500" src="{{ site.baseurl }}/images/CampusConnect.png" alt="Screenshot"></span>
