--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 					<li>초심자를 위한 가이드 페이지 제공</li>
 					<li>캠핑장에 대한 정보뿐 아니라 캠핑에 대한 연관정보까지 제공</li>
 				</ul>
-
+<a href="https://www.canva.com/design/DAGJATX1u_Y/7HCcmqUqGlDUzPuIIvNsZQ/view?utm_content=DAGJATX1u_Y&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank">Presentation Link</a>
 				<h3 class="editable">나만의 문제 해결</h3>
 				<ul>
 					<li>API 요청 시 GET 메서드를 사용하여 헤더를 설정하고, 응답 코드에 따라 성공과 오류를 구분하여 처리.<br>
@@ -38,6 +38,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 						이로써 JSON 데이터를 구조화하여 쉽게 읽고 이해할 수 있게 변환.
 </li>
 				</ul>
+				
 			</div>
 			<div class="image">
 				<span class="editable"><img width="500" height="500" src="{{ site.baseurl }}/images/KampingMate/KampingMate_main.webp" alt="Screenshot"></span>
@@ -55,7 +56,7 @@ bottom_image: https://unsplash.it/2000/1322?a=.png
 					<li>건강하게 직접 해 먹을 수 있는 사이트를 만들자!</li>
 					<li>개인 바디데이터와 사용자가 선택한 음식 추천 조건을 선택</li>
 				</ul>
-
+<a href="https://www.canva.com/design/DAGF8EDc0x4/Bx3Oi4_xS7qlrDNXaxLpLA/view?utm_content=DAGF8EDc0x4&utm_campaign=designshare&utm_medium=link&utm_source=editor" target="_blank">Presentation Link</a>
 				<h3 class="editable">나만의 문제 해결</h3>
 				<ul>
 					<li>사용자 정보를 세션에서 가져와 새 문의에 필요한 사용자 정보를 자동으로 설정하고 저장.<br>
