--- a/index.html
+++ b/index.html
@@ -5,18 +5,23 @@ image: https://source.unsplash.com/j5LSbCqB1wA/2000x1322?a=.png
 bottom_image: https://unsplash.it/2000/1322?a=.png
 ---
 
-<section class="hero" style="background-image: url('https://drive.google.com/uc?export=view&id=1FUT9sMQSVu1vv8O1X4ZTKECHMTqVvstx')">
-	<div class="inner-hero text-container">
-		<div class="hero-text-container">
-			<h1 class="editable">전선아의 포트폴리오</h1>
-			<p class="subtext editable">
-    <strong style="color: green;">강점</strong>과 <strong style="color: green;">약점</strong>을 이해하고 지속적으로 개선하는 <strong style="color: green;">성장 마인드</strong>를 가진 
-    사람이자 꾸준한 <strong style="color: green;">자기 개발</strong>로 <strong style="color: green;">변화를 주도하는</strong> IT 신입 지원자 입니다.
+<section class="hero" style="background-image: url('https://drive.google.com/uc?export=view&id=1FUT9sMQSVu1vv8O1X4ZTKECHMTqVvstx'); background-size: cover; background-position: center;">
+	<div class="inner-hero text-container" style="background: rgba(255, 255, 255, 0.8); padding: 20px; border-radius: 10px;">
+		<div class="hero-text-container" style="text-align: center;">
+			<h1 class="editable" style="color: #2c3e50;">전선아의 포트폴리오</h1>
+			<p class="subtext editable" style="color: #34495e; font-size: 1.2em;">
+    <strong style="color: #27ae60;">강점</strong>과 <strong style="color: #27ae60;">약점</strong>을 이해하고 지속적으로 개선하는 <strong style="color: #27ae60;">성장 마인드</strong>를 가진 
+    사람이며 꾸준한 <strong style="color: #27ae60;">자기 개발</strong>로 <strong style="color: #27ae60;">변화를 주도하는</strong> IT 신입 지원자입니다.
 </p>
 		</div>
 	</div>
-	<div class="learn-more"><a href="#learn-more"> more <span class="arrow">&#x25BC;</span></a></div>
+	<div class="learn-more" style="text-align: center; margin-top: 20px;">
+		<a href="#learn-more" style="color: #3498db; text-decoration: none; font-weight: bold;">
+			더 알아보기 <span class="arrow" style="font-size: 1.2em;">&#x25BC;</span>
+		</a>
+	</div>
 </section>
+
 
 <div class="content">
 	<section class="info" id="learn-more">
