--- a/about.html
+++ b/about.html
@@ -24,6 +24,7 @@ image: https://source.unsplash.com/BcoGknSqlDc/2000x1322?a=.png
 <section class="pad">
     <div class="container">
         <p class="editor-link"><a href="https://github.com/KampingMate/KampingMate" class="btn"><strong>&#9998;</strong> Manage Staff Members</a></p>
+        <p class="note" style="text-align: center; font-size: 0.9em; color: #7f8c8d;">제목을 누르면 각 프로젝트의 세부사항을 확인하실 수 있습니다</p>
         <ul class="staff">
             {% for person in site.staff_members %}
                 <li>
